--- a/about.html
+++ b/about.html
@@ -2,11 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>AboutUs</title>
 </head>
 <body class="h-screen flex items-center justify-center bg-gray-200">
     <div class="bg-white p-8 rounded shadow-lg text-center">
         <h1 class="text-4xl mb-4">About Us</h1>
-        <p class="text-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque unde non minima ut, quis aspernatur ex, vel beatae harum libero corporis mollitia error temporibus eos? Placeat nostrum adipisci minus quo.
+        <p class="text-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque unde non minima ut, quis aspernatur ex, vel beatae harum libero corporis mollitia error temporibus eos? Placeat nostrum adipisci minus </P>
 </body>
 </html>
